<resources>
    <string name="app_name">Voting App</string>
    <string name="username_string">Username</string>
    <string name="password_string">Password</string>
    <string name="login_string">Login</string>
    <string name="register_string">Register</string>
    <string name="repeat_password_string">Repeat password</string>
    <string name="administrator_dashboard_string">Administrator Dashboard</string>
    <string name="add_new_vote_string">Add new Vote</string>
    <string name="add_vote_string">Add Vote</string>
    <string name="start_vote_string">Start vote</string>
    <string name="question_string">Question</string>
    <string name="first_choice_string">First choice</string>
    <string name="second_choice_string">Second choice</string>
    <string name="third_choice_string">Third choice</string>
    <string name="fourth_choice_string">Fourth choice</string>
    <string name="fifth_choice_string">Fifth choice</string>
    <string name="end_time_string">End time (format: "hh:mm")</string>
    <string name="refresh_votes_string">Refresh votes</string>
    <string name="choose_vote_string">Choose vote</string>
    <string name="vote_ends_in_string">Vote ends in:</string>
    <string name="submit_vote_string">Submit vote</string>
    <string name="results_aren_t_available_string">Results aren\'t available</string>
    <string name="show_on_map_string">Show on map</string>
    <string name="vote_channel">Vote</string>
    <string name="vote_channel_description">Vote Description</string>
</resources>